[metadata]
name = scaphra
version = 0.1
author = Felix Hamann
author_email = felix@hamann.xyz

description = SCAPHRA - Match scattered phrases
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/lavis-nlp/scaphra
project_urls =
    Bug Tracker = https://github.com/lavis-nlp/scaphra/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.9

install_requires =
    ktz==0.2
    spacy<=3.4

[options.extras_require]
dev =
    build
    ipdb
    ipython
    jupyter
    # code quality
    black
    pytest
    pytest-watch
    coverage
    # lsp
    pyls-isort
    python-lsp-black
    python-lsp-server[flake8]


[flake8]
# black default
max-line-length = 89
ignore = D105, D107, E203

[pycodestyle]
# black default
max-line-length = 89
ignore = D105, D107, E203


[coverage:report]
exclude_lines =
    pragma: no cover
    def __str__